--- a/index.html
+++ b/index.html
@@ -57,23 +57,20 @@
     <div class="container">
         <div class="row">
             <button class="btn btn-outline-light btn-block" type="button" id="begin">BEGIN</button>
-
-                <div id="main" class="col-12 bg-light animated d-none">
-                    <div class="correct animated d-none">[CORRECT]</div>
-                    <div class="wrong animated d-none">[WRONG]</div>
-                    <h1 class="bitter text-center question">QUESTION GOES HERE BUDD)</h1>
-                    <div class="row">
-                        <p class="overpass col-12 offset-1 answer answer1">Answer 1</p>
-                        <p class="overpass col-12 offset-1 answer answer2">Answer 2</p>
-                        <p class="overpass col-12 offset-1 answer answer3">Answer 3</p>
-                        <p class="overpass col-12 offset-1 answer answer4">Answer 4</p>
-                    </div>
+            <div id="main" class="col-12 bg-light animated d-none">
+                <div class="correct animated ">[CORRECT]</div>
+                <div class="wrong animated">[WRONG]</div>
+                <h1 class="bitter text-center question">QUESTION GOES HERE BUDD)</h1>
+                <div class="row">
+                    <p class="overpass col-12 offset-1 answer answer1">Answer 1</p>
+                    <p class="overpass col-12 offset-1 answer answer2">Answer 2</p>
+                    <p class="overpass col-12 offset-1 answer answer3">Answer 3</p>
+                    <p class="overpass col-12 offset-1 answer answer4">Answer 4</p>
                 </div>
-
+            </div>
         </div>
     </div>
-
-
+    <div class="background d-none animated">01</div>
 </body>
 
 </html>
