--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                 <div class="time-up animated d-none">[TIME UP]</div>
                 <h1 class="bitter text-center question">QUESTION GOES HERE BUDD)</h1>
                 <div class="row">
-                    <p class="overpass col-12 offset-1 answer answer1">Answer 1</p>
-                    <p class="overpass col-12 offset-1 answer answer2">Answer 2</p>
-                    <p class="overpass col-12 offset-1 answer answer3">Answer 3</p>
-                    <p class="overpass col-12 offset-1 answer answer4">Answer 4</p>
+                    <p class="overpass col-12 answer answer1">Answer 1</p>
+                    <p class="overpass col-12 answer answer2">Answer 2</p>
+                    <p class="overpass col-12 answer answer3">Answer 3</p>
+                    <p class="overpass col-12 answer answer4">Answer 4</p>
                 </div>
             </div>
             <div id="end" class="col-12 bg-light animated d-none">
